Fix touch gestures when launching triplea with gradle(#13691)
Fix the issue #13456 by adding a flag to unlock the API on Mac. The flag should be invalid and should not affect the program working in other operating system.