@@ -5,6 +5,13 @@ plugins {
     id "de.undercouch.download" version "5.6.0"
 }
 
+application {
+    applicationDefaultJvmArgs = [
+            //This flag fixes touch gestures in Java-21；Technical Reference: https://stackoverflow.com/questions/48535595/what-replaces-gestureutilities-in-java-9
+            "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED"
+    ]
+}
+
 archivesBaseName = "$group-$name"
 mainClassName = "org.triplea.game.client.HeadedGameRunner"
 
